refactor: use Stream.toList() over collect(Collectors.toList()) in IgdbService